# Fluopy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  LICENSE  README retreat.md  README.md  notes to discarded tcspc simulation.txt  pyproject.toml  requirements.txt
.github/workflows/: deploy_to_pypi.yml  deploy_to_testpypi.yml  test.yml  test_OS_matrix.yml  test_python_matrix.yml
Chapter I/0. Introduction Figure/: cy5_molecule.ipynb
Chapter I/1. Graphical abstract/: graphical_abstract.ipynb
Chapter I/2. Figure 1/: 1f.ipynb
Chapter I/3. Figure 2/: fingerprint_1f.ipynb
Chapter I/4. Figure 3/: OETr100%eff0,01%4F.ipynb  OETr100%eff0,01%4FTCSPC.ipynb  fingerprint_multif.ipynb
Chapter I/Supplement Figure 1/: 4f_no_et.ipynb
Chapter I/Supplement Figure 2/: off_prob_no_bl.ipynb
Chapter I/Supplement Higher excited states bleaching/: bleach_6nm.ipynb
Chapter I/Supplement validations/: Widengren et al.ipynb  validations.ipynb
Chapter III/: homoFRET_fluorescence_lifetime$btc$.ipynb
Chapter_I$d$/0_0_graphical_abstract$DY$/: graphical_abstract$CTVB$.ipynb
Chapter_I$d$/0_1_introduction_figure$D$/: cy5_molecule$CTVB$.ipynb
Chapter_I$d$/0_2_single_f_statistics$D$/: single_f_statistics$CTVB$.ipynb
Chapter_I$d$/0_2_single_f_statistics$DY$/: single_f_statistics$CTVB$.ipynb
Chapter_I$d$/0_3_single_f_PFA$D$/: data_gen_bl_rate$CTVB$.ipynb  data_gen_off_prob$CTVB$.ipynb  data_gen_off_time$CTVB$.ipynb  single_f_PFA$CTVB$.ipynb
Chapter_I$d$/0_3_single_f_PFA$DY$/: data_gen_bl_rate$CTVB$.ipynb  single_f_PFA$CTVB$.ipynb
Chapter_I$d$/0_4_multi_f_PFA/: data_gen_2_f_PFA$CTVB$.ipynb  data_gen_4_f_PFA$CTVB$ copy.ipynb  data_gen_4_f_PFA$CTVB$.ipynb  data_gen_4_f_lifetime$CTVB$.ipynb  multi_f_PFA$CTVB$.ipynb
Chapter_I$d$/0_5_modeling/: bleaching fitting data generation.ipynb  modeling.ipynb
Chapter_I$d$/1_10_multi_f_et_statistics/: 4_f_et_statistics$CTVB$.ipynb
Chapter_I$d$/1_1_multi_f_no_et_statistics$D$/: 4_f_no_et_statistics$CTVB$.ipynb
Chapter_I$d$/1_2_single_f_pulsed_statistics$D$/: single_f_pulsed_statistics$CTVB$.ipynb
Chapter_I$d$/1_2_single_f_pulsed_statistics$DY$/: single_f_pulsed_statistics$CTVB$.ipynb
Chapter_I$d$/1_3_validations$D$/: validations$CTVB$.ipynb
Chapter_I$d$/1_3_validations$DY$/: validations$CTVB$.ipynb
Chapter_I$d$/1_4_single_f_PFA_gl_bl_times$D$/: single_f_PFA_gl_bl_times$CTVB$.ipynb
Chapter_I$d$/1_4_single_f_PFA_gl_bl_times$DY$/: single_f_PFA_gl_bl_times$CTVB$.ipynb
Chapter_I$d$/1_5_single_f_PFA_add$D$/: data_gen_off_prob_no_bl$CTVB$.ipynb  data_gen_off_time_no_bl$CTVB$.ipynb  single_f_PFA_add$CTVB$.ipynb
Chapter_I$d$/1_5_single_f_PFA_add$DY$/: data_gen_off_prob_no_bl$CTVB$.ipynb  data_gen_off_time_no_bl$CTVB$.ipynb
Chapter_I$d$/1_6_PET_rate$DY$/: data_gen_PET_rate$CTVB$.ipynb  single_f_PFA_PET_rate$CTVB$.ipynb
Chapter_I$d$/1_7_multi_f_PFA_higher_exc/: data_gen_ion_001$ctvb$.ipynb  data_gen_ion_005$ctvb$.ipynb
Chapter_I$d$/1_8_multi_f_PFA_RISC/: sim_data_analysis.py
Chapter_I$d$/1_9_multi_f_PFA_add/: OETr100%eff0,001%4F.ipynb
Chapter_I$d$/1_9_multi_f_et_statistics$D$/: 4_f_et_statistics$CTVB$.ipynb
General/: coincidence_plots.ipynb  energy_transfer_efficiency.ipynb  trials.ipynb
General$D$/: energy_transfer_efficiency$CTVB$.ipynb  fcs_antibunching$CTVB$.ipynb  trials$CTVB$.ipynb  tutorial$CTVB$.ipynb
docker/: Dockerfile  README.md
docs/: conf.py  index.rst  pylock.toml  requirements.txt  requirements_rtd.txt
docs/source/: contributions.rst  design.rst  installation.rst  introduction.rst  license.rst  logging.rst
docs/tutorials/: tutorials.rst
notebooks/: Cis_Trans_addition.ipynb  Classic_jablonski_model.ipynb  Cy5_Cis_Model.ipynb  Cy5_Cis_dSTORM_Model.ipynb  Cy5_dSTORM_model.ipynb  Cy5_model.ipynb  General_model.ipynb  INT_1_fluorophore.ipynb  ON_OFF_model.ipynb  README.txt  Untitled.ipynb  fast_algorithm.ipynb  general_usage copy.ipynb  general_usage-Copy1.ipynb  general_usage.ipynb  hydroquinone.ipynb  klosters_multiple_choice.ipynb  pytorch_simulation.ipynb  time_complexity.ipynb  trials.ipynb  tutorial.ipynb  tutorial_retreat.ipynb
notebooks/Additional/: data_gen_4F_45A.ipynb  data_gen_4F_45A80A.ipynb  data_gen_4F_80A.ipynb  mixed_populations_question_markus.ipynb
notebooks/Chapter_II$d$/: lying_lifetimes.ipynb
notebooks/Chapter_III/: homoFRET_fluorescence_lifetime.ipynb
notebooks/Chapter_III$D$/: homoFRET_fluorescence_lifetime$CTB$.ipynb  homoFRET_fluorescence_lifetime$CTVB$.ipynb
notebooks/General/: coincidence_plots.ipynb  dipole_orientation_factor.ipynb  energy_transfer_efficiency.ipynb  fcs_antibunching.ipynb  spectral_overlap_integrals.ipynb  trials.ipynb  tutorial.ipynb
notebooks/General$D$/: coincidence_plots$CTB$.ipynb  coincidence_plots$CTVB$.ipynb  energy_transfer_efficiency$CTB$.ipynb  fcs_antibunching$CTB$.ipynb  spectral_overlap_integrals$CTB$.ipynb  spectral_overlap_integrals$CTVB$.ipynb  trials$CTB$.ipynb  tutorial$CTB$.ipynb
notebooks/cy5/: Gidi et al.ipynb  (+1 more)
src/: NEW_blinking.py  NEW_cy5.py  NEW_emissions.py  NEW_fcs.py  NEW_fluorophores.py  NEW_gillespie_algorithm.py  NEW_miscellaneous.py  NEW_network.py  NEW_photophysics.py  NEW_simulation.py  NEW_statistics.py  NEW_tcspc.py  NEW_transitions.py  Xenergy_transfer.py  Xtest_energy_transfer.py  __init__.py  abstract_classes.py  analysis.py  animations.py  antibunching.py  blinking.py  calc_rate_constant.py  custom_plot.py  cy5_properties.py  distributions.py  emissions.py  emitting_transitions.py  energy_transfer.py  fcs.py  figure.py  figures.py  fitting.py  fluo_data.py  fluorophore_systems.py  fluorophores.py  formulas.py  gasfafsafs.py  gillespie_algorithm.py  helper.py  initialize.py  (+18 more)
tests/: __init__.py  conftest.py  test_analysis.py  test_blinking.py  test_distributions.py  test_emissions.py  test_fcs.py  test_figure.py  test_fluo_data.py  test_fluopy.py  test_fluopy_types.py  test_fluorophores.py  test_formulas.py  test_import.py  test_kappa_squared.py  test_miscellaneous.py  test_network.py  test_predictions.py  test_simulation.py  test_simulation_tcspc.py  test_transitions.py
(+624 files in other folders)
